# SLAMv2

./: .gitignore  .gitmodules  README.md  frames_2026-04-11_18.17.14.gv  frames_2026-04-18_03.41.15.gv  pixi.toml
install/: local_setup.sh  setup.sh
install/cev_pose_graph_slam/lib/cev_pose_graph_slam/: pgo_node
install/cev_pose_graph_slam/share/cev_pose_graph_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cev_pose_graph_slam/share/cev_pose_graph_slam/cmake/: cev_pose_graph_slamConfig-version.cmake  cev_pose_graph_slamConfig.cmake
install/cev_pose_graph_slam/share/cev_pose_graph_slam/environment/: ament_prefix_path.dsv  path.dsv
install/lidar_odometry/lib/lidar_odometry/: motor_controller
install/lidar_odometry/share/lidar_odometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lidar_odometry/share/lidar_odometry/cmake/: lidar_odometryConfig-version.cmake  lidar_odometryConfig.cmake
install/lidar_odometry/share/lidar_odometry/config/: ekf.yaml
install/lidar_odometry/share/lidar_odometry/environment/: ament_prefix_path.dsv  path.dsv
install/witmotion_ros2/lib/witmotion_ros2/: witmotion_ros2
install/witmotion_ros2/share/witmotion_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/cev_pose_graph_slam/: CMakeLists.txt
src/cev_pose_graph_slam/src/: SLAM_backend_math.cpp
src/script/: SLAM_backend_math.cpp
(+15 files in other folders)
